2007-03-15  Martin Nordholts  <martinn@svn.gnome.org>

	Converted .gbr to .vbr brushes where possible. Fixes bug #322176 and
	bug #157506.

	* data/brushes/Makefile.am: Changed .gbr for .vbr-counterparts for
	converted brushes.

	* data/brushes/*circle.gbr:
	* data/brushes/*fcircle.gbr:
	* data/brushes/DStar*.gbr:
	* data/brushes/callig*.gbr: Removed.

	* data/brushes/Circle-*.vbr:
	* data/brushes/Circle-Fuzzy-*.vbr:
	* data/brushes/Diagonal-Star-*.vbr:
	* data/brushes/Calligraphic-Brush-*.vbr: Added.

2007-03-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpaligntool.c
	* app/tools/gimpcolorpickertool.c
	* app/tools/gimppainttool.c
	* app/tools/gimpvectortool.c: remove gimp_tool_pop_status() from
	control() implementations because GimpTool does this generically now.

	* app/tools/gimpblendtool.c
	* app/tools/gimpselectiontool.c: remove entire control()
	implementations because they were doing nothing else.

2007-03-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimppaintoptions-gui.c (gimp_paint_options_gui): "adj"
	is a GtkObject not a GtkWidget, also moved it to its local scope.

2007-03-15  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimprectangletool.c (gimp_rectangle_tool_halt): check
	if tool->display is there before dereferencing it (bug #418504).

	(gimp_rectangle_tool_start): add "display" parameter and set
	tool->display here.

	(gimp_rectangle_tool_button_press): pass the display to start()
	and don't set tool->display here.

2007-03-14  Michael Natterer  <mitch@gimp.org>

	Make the status display stuff local to GimpTool:

	* app/tools/tool_manager.c (tool_manager_control_active): don't
	call gimp_tool_clear_status().

	* app/tools/gimptool.[ch]: make gimp_tool_clear_status() a
	private function. Move call to gimp_tool_clear_status() from
	real_control() to control(). Check the status_displays too in
	gimp_tool_real_has_display() and gimp_tool_has_image() so the
	normal mechanism of control(HALT)ing (and thus popping all